--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:N6YbArNfzdOc0mhZ/GRWgXYXiiL/Y0APqYKqSQk0iGg=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE='Asia/Dhaka'
+DB_TIMEZONE = '+06:00'
 
 LOG_CHANNEL=stack
 
