--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ DB_PORT=3306
 DB_DATABASE=elaravel_v2
 DB_USERNAME=root
 DB_PASSWORD=root
+# bismib_fashion@_mysql
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
