--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:N6YbArNfzdOc0mhZ/GRWgXYXiiL/Y0APqYKqSQk0iGg=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 APP_TIMEZONE='Asia/Dhaka'
 DB_TIMEZONE = '+06:00'
