change downloadable pdf and added watermar

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:N6YbArNfzdOc0mhZ/GRWgXYXiiL/Y0APqYKqSQk0iGg=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE='Asia/Dhaka'
 DB_TIMEZONE = '+06:00'
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=elaravel_v2
 DB_USERNAME=root
-DB_PASSWORD=bismib_fashion@_mysql
+DB_PASSWORD=root
 # bismib_fashion@_mysql
 
 BROADCAST_DRIVER=log
