--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=elaravel_v2
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=bismib_fashion@_mysql
+# DB_PASSWORD=root
 # bismib_fashion@_mysql
 
 BROADCAST_DRIVER=log
