--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=elaravel_v2
-DB_USERNAME=root
-DB_PASSWORD=bismib_fashion@_mysql
+DB_DATABASE=iteefkmy_elaravel_v2
+DB_USERNAME=iteefkmy_root
+DB_PASSWORD=iteefkmy_bismib_fashion@_mysql
 # DB_PASSWORD=root
 # bismib_fashion@_mysql
 
