--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:N6YbArNfzdOc0mhZ/GRWgXYXiiL/Y0APqYKqSQk0iGg=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE='Asia/Dhaka'
 DB_TIMEZONE = '+06:00'
@@ -11,10 +11,12 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=iteefkmy_elaravel_v2
-DB_USERNAME=iteefkmy_root
-DB_PASSWORD=iteefkmy_bismib_fashion@_mysql
-# DB_PASSWORD=root
+# DB_DATABASE=iteefkmy_elaravel_v2
+DB_DATABASE=elaravel_v2
+# DB_USERNAME=iteefkmy_root
+DB_USERNAME=root
+# DB_PASSWORD=iteefkmy_bismib_fashion@_mysql
+DB_PASSWORD=root
 # bismib_fashion@_mysql
 
 BROADCAST_DRIVER=log
